<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="the answer is False"
        android:inputType="date"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="QUIZ"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp"
        tools:textColorHint="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/question_Tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:text="@string/first_question"
        android:textAlignment="center"
        android:textColor="#E11010"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:backgroundTint="@color/black"
            android:text="@string/true_Button"
            android:textColor="#212121" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:layout_weight="1"
            android:backgroundTint="#CF1313"
            android:text="@string/false_Button"
            android:textColor="#757575"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backbutton" />

        <LinearLayout
            android:layout_width="23dp"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/next_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextButton" />
    </LinearLayout>

</LinearLayout>